--- a/PhysicsGame.vcxproj
+++ b/PhysicsGame.vcxproj
@@ -213,6 +213,7 @@
     <ClInclude Include="Source\external\pugi\pugiconfig.hpp" />
     <ClInclude Include="Source\external\pugi\pugixml.hpp" />
     <ClInclude Include="Source\Globals.h" />
+    <ClInclude Include="Source\MemLeaks.h" />
     <ClInclude Include="Source\Module.h" />
     <ClInclude Include="Source\ModuleAssetLoader.h" />
     <ClInclude Include="Source\ModuleAudio.h" />
