--- a/PhysicsGame.vcxproj
+++ b/PhysicsGame.vcxproj
@@ -194,13 +194,15 @@
     <ClCompile Include="Source\Application.cpp" />
     <ClCompile Include="Source\Box2DFactory.cpp" />
     <ClCompile Include="Source\CollisionSensor.cpp" />
-    <ClCompile Include="Source\CollisionsManager.cpp" />
+    <ClCompile Include="Source\CollisionsDispatcher.cpp" />
     <ClCompile Include="Source\external\pugi\pugixml.cpp" />
     <ClCompile Include="Source\Log.cpp" />
     <ClCompile Include="Source\Main.cpp" />
+    <ClCompile Include="Source\MapObject.cpp" />
     <ClCompile Include="Source\ModuleAssetLoader.cpp" />
     <ClCompile Include="Source\ModuleAudio.cpp" />
     <ClCompile Include="Source\ModuleGame.cpp" />
+    <ClCompile Include="Source\ModuleLocalization.cpp" />
     <ClCompile Include="Source\ModulePhysics.cpp" />
     <ClCompile Include="Source\ModuleRender.cpp" />
     <ClCompile Include="Source\ModuleTexture.cpp" />
@@ -211,15 +213,17 @@
     <ClInclude Include="Source\Application.h" />
     <ClInclude Include="Source\Box2DFactory.h" />
     <ClInclude Include="Source\CollisionSensor.h" />
-    <ClInclude Include="Source\CollisionsManager.h" />
+    <ClInclude Include="Source\CollisionsDispatcher.h" />
     <ClInclude Include="Source\external\pugi\pugiconfig.hpp" />
     <ClInclude Include="Source\external\pugi\pugixml.hpp" />
     <ClInclude Include="Source\Globals.h" />
+    <ClInclude Include="Source\MapObject.h" />
     <ClInclude Include="Source\MemLeaks.h" />
     <ClInclude Include="Source\Module.h" />
     <ClInclude Include="Source\ModuleAssetLoader.h" />
     <ClInclude Include="Source\ModuleAudio.h" />
     <ClInclude Include="Source\ModuleGame.h" />
+    <ClInclude Include="Source\ModuleLocalization.h" />
     <ClInclude Include="Source\ModulePhysics.h" />
     <ClInclude Include="Source\ModuleRender.h" />
     <ClInclude Include="Source\ModuleTexture.h" />
