--- a/PhysicsGame.vcxproj
+++ b/PhysicsGame.vcxproj
@@ -193,12 +193,12 @@
   <ItemGroup>
     <ClCompile Include="Source\Application.cpp" />
     <ClCompile Include="Source\Box2DFactory.cpp" />
+    <ClCompile Include="Source\Car.cpp" />
     <ClCompile Include="Source\CollisionSensor.cpp" />
     <ClCompile Include="Source\CollisionsDispatcher.cpp" />
     <ClCompile Include="Source\external\pugi\pugixml.cpp" />
     <ClCompile Include="Source\Log.cpp" />
     <ClCompile Include="Source\Main.cpp" />
-    <ClCompile Include="Source\MapObject.cpp" />
     <ClCompile Include="Source\ModuleAssetLoader.cpp" />
     <ClCompile Include="Source\ModuleAudio.cpp" />
     <ClCompile Include="Source\ModuleGame.cpp" />
@@ -208,10 +208,13 @@
     <ClCompile Include="Source\ModuleTexture.cpp" />
     <ClCompile Include="Source\ModuleWindow.cpp" />
     <ClCompile Include="Source\Timer.cpp" />
+    <ClCompile Include="Source\Vehicle.cpp" />
+    <ClCompile Include="Source\Wheel.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Application.h" />
     <ClInclude Include="Source\Box2DFactory.h" />
+    <ClInclude Include="Source\Car.h" />
     <ClInclude Include="Source\CollisionSensor.h" />
     <ClInclude Include="Source\CollisionsDispatcher.h" />
     <ClInclude Include="Source\external\pugi\pugiconfig.hpp" />
@@ -230,6 +233,8 @@
     <ClInclude Include="Source\ModuleWindow.h" />
     <ClInclude Include="Source\p2Point.h" />
     <ClInclude Include="Source\Timer.h" />
+    <ClInclude Include="Source\Vehicle.h" />
+    <ClInclude Include="Source\Wheel.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
