--- a/PhysicsGame.vcxproj.filters
+++ b/PhysicsGame.vcxproj.filters
@@ -46,15 +46,15 @@
     <Filter Include="Systems\Particles\Type %28Particle%29">
       <UniqueIdentifier>{a184f345-9322-4ded-9275-b7f078c16acb}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Modules\Type %28Module%29\Scene %28ModueScene%29">
+      <UniqueIdentifier>{f35bc0d6-23c6-49c0-9edf-e45af945fa7b}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source\ModuleAssetLoader.cpp">
       <Filter>Modules\Type %28Module%29</Filter>
     </ClCompile>
     <ClCompile Include="Source\ModuleAudio.cpp">
-      <Filter>Modules\Type %28Module%29</Filter>
-    </ClCompile>
-    <ClCompile Include="Source\ModuleGame.cpp">
       <Filter>Modules\Type %28Module%29</Filter>
     </ClCompile>
     <ClCompile Include="Source\ModulePhysics.cpp">
@@ -113,15 +113,18 @@
     <ClCompile Include="Source\CursorChanger.cpp">
       <Filter>Utils</Filter>
     </ClCompile>
+    <ClCompile Include="Source\ModuleScene.cpp">
+      <Filter>Modules\Type %28Module%29</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\ModuleGame.cpp">
+      <Filter>Modules\Type %28Module%29\Scene %28ModueScene%29</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\ModuleAssetLoader.h">
       <Filter>Modules\Type %28Module%29</Filter>
     </ClInclude>
     <ClInclude Include="Source\ModuleAudio.h">
-      <Filter>Modules\Type %28Module%29</Filter>
-    </ClInclude>
-    <ClInclude Include="Source\ModuleGame.h">
       <Filter>Modules\Type %28Module%29</Filter>
     </ClInclude>
     <ClInclude Include="Source\ModulePhysics.h">
@@ -191,6 +194,12 @@
     </ClInclude>
     <ClInclude Include="Source\CursorChanger.h">
       <Filter>Utils</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\ModuleScene.h">
+      <Filter>Modules\Type %28Module%29</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\ModuleGame.h">
+      <Filter>Modules\Type %28Module%29\Scene %28ModueScene%29</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
