--- a/PhysicsGame.vcxproj
+++ b/PhysicsGame.vcxproj
@@ -218,6 +218,7 @@
     <ClCompile Include="Source\Particle.cpp" />
     <ClCompile Include="Source\ParticleSystem.cpp" />
     <ClCompile Include="Source\Timer.cpp" />
+    <ClCompile Include="Source\UIButton.cpp" />
     <ClCompile Include="Source\Vehicle.cpp" />
     <ClCompile Include="Source\Wheel.cpp" />
   </ItemGroup>
@@ -249,6 +250,8 @@
     <ClInclude Include="Source\Particle.h" />
     <ClInclude Include="Source\ParticleSystem.h" />
     <ClInclude Include="Source\Timer.h" />
+    <ClInclude Include="Source\UIButton.h" />
+    <ClInclude Include="Source\UIElement.h" />
     <ClInclude Include="Source\Vehicle.h" />
     <ClInclude Include="Source\Wheel.h" />
   </ItemGroup>
