--- a/PhysicsGame.vcxproj.filters
+++ b/PhysicsGame.vcxproj.filters
@@ -134,6 +134,9 @@
     <ClCompile Include="Source\UIButton.cpp">
       <Filter>Systems\UI Elements\Type %28UI Elements%29</Filter>
     </ClCompile>
+    <ClCompile Include="Source\UISlider.cpp">
+      <Filter>Systems\UI Elements\Type %28UI Elements%29</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\ModuleAssetLoader.h">
@@ -223,6 +226,9 @@
       <Filter>Systems\UI Elements</Filter>
     </ClInclude>
     <ClInclude Include="Source\UIButton.h">
+      <Filter>Systems\UI Elements\Type %28UI Elements%29</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\UISlider.h">
       <Filter>Systems\UI Elements\Type %28UI Elements%29</Filter>
     </ClInclude>
   </ItemGroup>
