--- a/PhysicsGame.vcxproj
+++ b/PhysicsGame.vcxproj
@@ -234,6 +234,7 @@
     <ClInclude Include="Source\DriftParticle.h" />
     <ClInclude Include="Source\external\pugi\pugiconfig.hpp" />
     <ClInclude Include="Source\external\pugi\pugixml.hpp" />
+    <ClInclude Include="Source\FontCreator.h" />
     <ClInclude Include="Source\Globals.h" />
     <ClInclude Include="Source\MapLapSensor.h" />
     <ClInclude Include="Source\MapObject.h" />
