--- a/PhysicsGame.vcxproj.filters
+++ b/PhysicsGame.vcxproj.filters
@@ -1,253 +1,77 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
+    <ClCompile Include="Source\AnimationSystem.cpp" />
+    <ClCompile Include="Source\Application.cpp" />
+    <ClCompile Include="Source\Box2DFactory.cpp" />
+    <ClCompile Include="Source\CollisionSensor.cpp" />
+    <ClCompile Include="Source\CollisionsDispatcher.cpp" />
+    <ClCompile Include="Source\CursorChanger.cpp" />
+    <ClCompile Include="Source\DriftParticle.cpp" />
+    <ClCompile Include="Source\external\pugi\pugixml.cpp" />
+    <ClCompile Include="Source\Log.cpp" />
+    <ClCompile Include="Source\Main.cpp" />
+    <ClCompile Include="Source\MapLapSensor.cpp" />
+    <ClCompile Include="Source\ModuleAssetLoader.cpp" />
+    <ClCompile Include="Source\ModuleAudio.cpp" />
+    <ClCompile Include="Source\SceneGame.cpp" />
+    <ClCompile Include="Source\ModuleLocalization.cpp" />
+    <ClCompile Include="Source\SceneOptions.cpp" />
+    <ClCompile Include="Source\SceneMainMenu.cpp" />
+    <ClCompile Include="Source\ModulePhysics.cpp" />
+    <ClCompile Include="Source\ModuleRender.cpp" />
+    <ClCompile Include="Source\ModuleScene.cpp" />
+    <ClCompile Include="Source\ModuleTexture.cpp" />
+    <ClCompile Include="Source\ModuleWindow.cpp" />
+    <ClCompile Include="Source\Particle.cpp" />
+    <ClCompile Include="Source\ParticleSystem.cpp" />
+    <ClCompile Include="Source\Timer.cpp" />
+    <ClCompile Include="Source\UIButton.cpp" />
+    <ClCompile Include="Source\UISlider.cpp" />
+    <ClCompile Include="Source\Vehicle.cpp" />
+    <ClCompile Include="Source\Wheel.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Source\AnimationSystem.h" />
+    <ClInclude Include="Source\Application.h" />
+    <ClInclude Include="Source\Box2DFactory.h" />
+    <ClInclude Include="Source\CollisionSensor.h" />
+    <ClInclude Include="Source\CollisionsDispatcher.h" />
+    <ClInclude Include="Source\CursorChanger.h" />
+    <ClInclude Include="Source\DriftParticle.h" />
+    <ClInclude Include="Source\external\pugi\pugiconfig.hpp" />
+    <ClInclude Include="Source\external\pugi\pugixml.hpp" />
+    <ClInclude Include="Source\FontCreator.h" />
+    <ClInclude Include="Source\Globals.h" />
+    <ClInclude Include="Source\MapLapSensor.h" />
+    <ClInclude Include="Source\MapObject.h" />
+    <ClInclude Include="Source\MemLeaks.h" />
+    <ClInclude Include="Source\Module.h" />
+    <ClInclude Include="Source\ModuleAssetLoader.h" />
+    <ClInclude Include="Source\ModuleAudio.h" />
+    <ClInclude Include="Source\SceneGame.h" />
+    <ClInclude Include="Source\ModuleLocalization.h" />
+    <ClInclude Include="Source\SceneOptions.h" />
+    <ClInclude Include="Source\SceneMainMenu.h" />
+    <ClInclude Include="Source\ModulePhysics.h" />
+    <ClInclude Include="Source\ModuleRender.h" />
+    <ClInclude Include="Source\ModuleScene.h" />
+    <ClInclude Include="Source\ModuleTexture.h" />
+    <ClInclude Include="Source\ModuleWindow.h" />
+    <ClInclude Include="Source\p2Point.h" />
+    <ClInclude Include="Source\Particle.h" />
+    <ClInclude Include="Source\ParticleSystem.h" />
+    <ClInclude Include="Source\Timer.h" />
+    <ClInclude Include="Source\UIButton.h" />
+    <ClInclude Include="Source\UIElement.h" />
+    <ClInclude Include="Source\UISlider.h" />
+    <ClInclude Include="Source\Vehicle.h" />
+    <ClInclude Include="Source\Wheel.h" />
+  </ItemGroup>
+  <ItemGroup>
     <ResourceCompile Include="Source\resources.rc" />
   </ItemGroup>
   <ItemGroup>
-    <Filter Include="Config">
-      <UniqueIdentifier>{bc6a982e-2791-417c-bcf0-251bbf0bbcc7}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="_Lib">
-      <UniqueIdentifier>{05b2cf4e-b768-429f-a085-79360164eb69}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="MapObjects">
-      <UniqueIdentifier>{6505ad53-93d0-4bdd-a52c-8de7c4e959a5}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="MapObjects\Type %28MapObjects%29">
-      <UniqueIdentifier>{d17b7f06-4dce-45b9-9098-dc5e843ec7a7}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Modules">
-      <UniqueIdentifier>{d2d0065d-bba7-42b8-8954-bff3fe451980}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Modules\Type %28Module%29">
-      <UniqueIdentifier>{1408dbf4-c099-4873-b851-8e6d775cef25}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Systems">
-      <UniqueIdentifier>{3c8e53d6-9bf5-42c3-89d8-406157a1f6c2}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Systems\CollisionDetection">
-      <UniqueIdentifier>{dd24ac99-1546-4e6a-96eb-5ea9ed5aeb27}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Utils">
-      <UniqueIdentifier>{6e251ee0-272d-46ed-bd41-859c7664fd32}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="_Lib\Pugixml">
-      <UniqueIdentifier>{f79505bd-d4a3-420f-8569-ff24cde47719}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="MapObjects\Type %28MapObjects%29\Vehicle">
-      <UniqueIdentifier>{2fd10773-abe3-4aa3-8baf-4782bb91813e}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="MapObjects\Type %28MapObjects%29\Vehicle\Wheels">
-      <UniqueIdentifier>{ee3ee948-48e2-42dd-bddc-0ee59a48d74a}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Systems\Particles">
-      <UniqueIdentifier>{e25d9678-7d87-4460-99cd-cfbd8121883f}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Systems\Particles\Type %28Particle%29">
-      <UniqueIdentifier>{a184f345-9322-4ded-9275-b7f078c16acb}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Modules\Type %28Module%29\Scene %28ModueScene%29">
-      <UniqueIdentifier>{f35bc0d6-23c6-49c0-9edf-e45af945fa7b}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="MapObjects\Type %28MapObjects%29\MapLapSensor">
-      <UniqueIdentifier>{70fb2e1e-7805-4dbb-b5a3-42de2f297c87}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Systems\UI Elements">
-      <UniqueIdentifier>{558447c7-0799-4fef-9c90-68e3c541fe0c}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Systems\UI Elements\Type %28UI Elements%29">
-      <UniqueIdentifier>{b8dca133-cd66-4c85-befb-085954201f28}</UniqueIdentifier>
-    </Filter>
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="Source\ModuleAssetLoader.cpp">
-      <Filter>Modules\Type %28Module%29</Filter>
-    </ClCompile>
-    <ClCompile Include="Source\ModuleAudio.cpp">
-      <Filter>Modules\Type %28Module%29</Filter>
-    </ClCompile>
-    <ClCompile Include="Source\ModulePhysics.cpp">
-      <Filter>Modules\Type %28Module%29</Filter>
-    </ClCompile>
-    <ClCompile Include="Source\ModuleRender.cpp">
-      <Filter>Modules\Type %28Module%29</Filter>
-    </ClCompile>
-    <ClCompile Include="Source\ModuleTexture.cpp">
-      <Filter>Modules\Type %28Module%29</Filter>
-    </ClCompile>
-    <ClCompile Include="Source\ModuleWindow.cpp">
-      <Filter>Modules\Type %28Module%29</Filter>
-    </ClCompile>
-    <ClCompile Include="Source\Main.cpp" />
-    <ClCompile Include="Source\Application.cpp" />
-    <ClCompile Include="Source\Log.cpp">
-      <Filter>Utils</Filter>
-    </ClCompile>
-    <ClCompile Include="Source\Timer.cpp">
-      <Filter>Utils</Filter>
-    </ClCompile>
-    <ClCompile Include="Source\CollisionSensor.cpp">
-      <Filter>Systems\CollisionDetection</Filter>
-    </ClCompile>
-    <ClCompile Include="Source\CollisionsDispatcher.cpp">
-      <Filter>Systems\CollisionDetection</Filter>
-    </ClCompile>
-    <ClCompile Include="Source\external\pugi\pugixml.cpp">
-      <Filter>_Lib\Pugixml</Filter>
-    </ClCompile>
-    <ClCompile Include="Source\Box2DFactory.cpp">
-      <Filter>Utils</Filter>
-    </ClCompile>
-    <ClCompile Include="Source\ModuleLocalization.cpp">
-      <Filter>Modules\Type %28Module%29</Filter>
-    </ClCompile>
-    <ClCompile Include="Source\Vehicle.cpp">
-      <Filter>MapObjects\Type %28MapObjects%29\Vehicle</Filter>
-    </ClCompile>
-    <ClCompile Include="Source\Wheel.cpp">
-      <Filter>MapObjects\Type %28MapObjects%29\Vehicle\Wheels</Filter>
-    </ClCompile>
-    <ClCompile Include="Source\AnimationSystem.cpp">
-      <Filter>Utils</Filter>
-    </ClCompile>
-    <ClCompile Include="Source\Particle.cpp">
-      <Filter>Systems\Particles</Filter>
-    </ClCompile>
-    <ClCompile Include="Source\DriftParticle.cpp">
-      <Filter>Systems\Particles\Type %28Particle%29</Filter>
-    </ClCompile>
-    <ClCompile Include="Source\ParticleSystem.cpp">
-      <Filter>Systems\Particles</Filter>
-    </ClCompile>
-    <ClCompile Include="Source\CursorChanger.cpp">
-      <Filter>Utils</Filter>
-    </ClCompile>
-    <ClCompile Include="Source\ModuleScene.cpp">
-      <Filter>Modules\Type %28Module%29</Filter>
-    </ClCompile>
-    <ClCompile Include="Source\SceneGame.cpp">
-      <Filter>Modules\Type %28Module%29\Scene %28ModueScene%29</Filter>
-    </ClCompile>
-    <ClCompile Include="Source\MapLapSensor.cpp">
-      <Filter>MapObjects\Type %28MapObjects%29\MapLapSensor</Filter>
-    </ClCompile>
-    <ClCompile Include="Source\ModuleOptions.cpp">
-      <Filter>Modules</Filter>
-    <ClCompile Include="Source\UIButton.cpp">
-      <Filter>Systems\UI Elements\Type %28UI Elements%29</Filter>
-    </ClCompile>
-    <ClCompile Include="Source\UISlider.cpp">
-      <Filter>Systems\UI Elements\Type %28UI Elements%29</Filter>
-    </ClCompile>
-    <ClCompile Include="Source\SceneMainMenu.cpp">
-      <Filter>Modules\Type %28Module%29\Scene %28ModueScene%29</Filter>
-    </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="Source\ModuleAssetLoader.h">
-      <Filter>Modules\Type %28Module%29</Filter>
-    </ClInclude>
-    <ClInclude Include="Source\ModuleAudio.h">
-      <Filter>Modules\Type %28Module%29</Filter>
-    </ClInclude>
-    <ClInclude Include="Source\ModulePhysics.h">
-      <Filter>Modules\Type %28Module%29</Filter>
-    </ClInclude>
-    <ClInclude Include="Source\ModuleRender.h">
-      <Filter>Modules\Type %28Module%29</Filter>
-    </ClInclude>
-    <ClInclude Include="Source\ModuleTexture.h">
-      <Filter>Modules\Type %28Module%29</Filter>
-    </ClInclude>
-    <ClInclude Include="Source\ModuleWindow.h">
-      <Filter>Modules\Type %28Module%29</Filter>
-    </ClInclude>
-    <ClInclude Include="Source\Module.h">
-      <Filter>Modules</Filter>
-    </ClInclude>
-    <ClInclude Include="Source\Globals.h" />
-    <ClInclude Include="Source\Application.h" />
-    <ClInclude Include="Source\p2Point.h">
-      <Filter>Utils</Filter>
-    </ClInclude>
-    <ClInclude Include="Source\Timer.h">
-      <Filter>Utils</Filter>
-    </ClInclude>
-    <ClInclude Include="Source\CollisionSensor.h">
-      <Filter>Systems\CollisionDetection</Filter>
-    </ClInclude>
-    <ClInclude Include="Source\CollisionsDispatcher.h">
-      <Filter>Systems\CollisionDetection</Filter>
-    </ClInclude>
-    <ClInclude Include="Source\external\pugi\pugixml.hpp">
-      <Filter>_Lib\Pugixml</Filter>
-    </ClInclude>
-    <ClInclude Include="Source\external\pugi\pugiconfig.hpp">
-      <Filter>_Lib\Pugixml</Filter>
-    </ClInclude>
-    <ClInclude Include="Source\MemLeaks.h">
-      <Filter>Utils</Filter>
-    </ClInclude>
-    <ClInclude Include="Source\Box2DFactory.h">
-      <Filter>Utils</Filter>
-    </ClInclude>
-    <ClInclude Include="Source\MapObject.h">
-      <Filter>MapObjects</Filter>
-    </ClInclude>
-    <ClInclude Include="Source\ModuleLocalization.h">
-      <Filter>Modules\Type %28Module%29</Filter>
-    </ClInclude>
-    <ClInclude Include="Source\Vehicle.h">
-      <Filter>MapObjects\Type %28MapObjects%29\Vehicle</Filter>
-    </ClInclude>
-    <ClInclude Include="Source\Wheel.h">
-      <Filter>MapObjects\Type %28MapObjects%29\Vehicle\Wheels</Filter>
-    </ClInclude>
-    <ClInclude Include="Source\AnimationSystem.h">
-      <Filter>Utils</Filter>
-    </ClInclude>
-    <ClInclude Include="Source\Particle.h">
-      <Filter>Systems\Particles</Filter>
-    </ClInclude>
-    <ClInclude Include="Source\DriftParticle.h">
-      <Filter>Systems\Particles\Type %28Particle%29</Filter>
-    </ClInclude>
-    <ClInclude Include="Source\ParticleSystem.h">
-      <Filter>Systems\Particles</Filter>
-    </ClInclude>
-    <ClInclude Include="Source\CursorChanger.h">
-      <Filter>Utils</Filter>
-    </ClInclude>
-    <ClInclude Include="Source\ModuleScene.h">
-      <Filter>Modules\Type %28Module%29</Filter>
-    </ClInclude>
-    <ClInclude Include="Source\SceneGame.h">
-      <Filter>Modules\Type %28Module%29\Scene %28ModueScene%29</Filter>
-    </ClInclude>
-    <ClInclude Include="Source\MapLapSensor.h">
-      <Filter>MapObjects\Type %28MapObjects%29\MapLapSensor</Filter>
-    </ClInclude>
-    <ClInclude Include="Source\ModuleOptions.h">
-      <Filter>Modules</Filter>
-    <ClInclude Include="Source\UIElement.h">
-      <Filter>Systems\UI Elements</Filter>
-    </ClInclude>
-    <ClInclude Include="Source\UIButton.h">
-      <Filter>Systems\UI Elements\Type %28UI Elements%29</Filter>
-    </ClInclude>
-    <ClInclude Include="Source\UISlider.h">
-      <Filter>Systems\UI Elements\Type %28UI Elements%29</Filter>
-    </ClInclude>
-    <ClInclude Include="Source\SceneMainMenu.h">
-      <Filter>Modules\Type %28Module%29\Scene %28ModueScene%29</Filter>
-    </ClInclude>
-    <ClInclude Include="Source\FontCreator.h">
-      <Filter>Utils</Filter>
-    </ClInclude>
-  </ItemGroup>
-  <ItemGroup>
-    <Xml Include="Assets\Data\vehicle_data.xml">
-      <Filter>Config</Filter>
-    </Xml>
+    <Xml Include="Assets\Data\vehicle_data.xml" />
   </ItemGroup>
 </Project>
