--- a/PhysicsGame.vcxproj
+++ b/PhysicsGame.vcxproj
@@ -219,6 +219,7 @@
     <ClCompile Include="Source\ModuleWindow.cpp" />
     <ClCompile Include="Source\Particle.cpp" />
     <ClCompile Include="Source\ParticleSystem.cpp" />
+    <ClCompile Include="Source\SceneSelectSetup.cpp" />
     <ClCompile Include="Source\Timer.cpp" />
     <ClCompile Include="Source\UIButton.cpp" />
     <ClCompile Include="Source\UISlider.cpp" />
@@ -255,6 +256,7 @@
     <ClInclude Include="Source\p2Point.h" />
     <ClInclude Include="Source\Particle.h" />
     <ClInclude Include="Source\ParticleSystem.h" />
+    <ClInclude Include="Source\SceneSelectSetup.h" />
     <ClInclude Include="Source\Timer.h" />
     <ClInclude Include="Source\UIButton.h" />
     <ClInclude Include="Source\UIElement.h" />
