Squashed commit of the following:
commit b1587810f6f2f902381a317fcde1351e66d8cc32
Author: Guillman07 <guillem.ma.dev@gmail.com>
Date:   Sun Dec 29 18:00:41 2024 +0100

    Update SceneOptions.cpp

commit a57e592a778c9f80ee06f720d5e05f40dd87d692
Author: M4xp0w3rg4m3s <156011390+M4xp0w3rg4m3s@users.noreply.github.com>
Date:   Sun Dec 29 17:39:39 2024 +0100

    agencyB nums according to code

commit 0ecbd1aa7848295be445c431a4bb8b5456fba1a0
Merge: 193bf66 cf49a85
Author: M4xp0w3rg4m3s <156011390+M4xp0w3rg4m3s@users.noreply.github.com>
Date:   Sun Dec 29 17:36:30 2024 +0100

    Merge branch 'Guillem' into Max

commit 193bf66ec8337e50c3fa19ab9e6b2df3595cf4b4
Merge: f984436 14ed302
Author: M4xp0w3rg4m3s <156011390+M4xp0w3rg4m3s@users.noreply.github.com>
Date:   Sun Dec 29 17:36:12 2024 +0100

    Merge branch 'main' into Max

commit cf49a858fa4193fb8f6f976150d9e78c95583ed3
Author: Guillman07 <guillem.ma.dev@gmail.com>
Date:   Sun Dec 29 17:27:55 2024 +0100

    fx

commit 0ab12411f05f1eacab1e15245c0a1d178a097354
Author: Guillman07 <guillem.ma.dev@gmail.com>
Date:   Sun Dec 29 17:20:21 2024 +0100

    Options finished(almost)

    slider values bug

commit ed1ce82853a3485ee03bd17012dc0e0fb321185b
Merge: 9037d20 14ed302
Author: Guillman07 <guillem.ma.dev@gmail.com>
Date:   Sun Dec 29 16:08:21 2024 +0100

    Merge branch 'main' into Guillem

commit 9037d20ba11fdbd1793791ed5a966ae204230e0b
Author: Guillman07 <guillem.ma.dev@gmail.com>
Date:   Sun Dec 29 16:08:11 2024 +0100

    Adjust pos Options

commit f984436c3d0de56d22ab03c4d28fb595d615a961
Author: M4xp0w3rg4m3s <156011390+M4xp0w3rg4m3s@users.noreply.github.com>
Date:   Sun Dec 29 12:23:20 2024 +0100

    settings visual fix start

commit e1d51e8ec76148405eae922a605bdad72cf1881c
Merge: be95a28 a42d5ba
Author: M4xp0w3rg4m3s <156011390+M4xp0w3rg4m3s@users.noreply.github.com>
Date:   Sun Dec 29 12:08:44 2024 +0100

    Merge branch 'Guillem' into Max

commit be95a28563f507879b09b352080f1b22ec63744c
Author: M4xp0w3rg4m3s <1

--- a/PhysicsGame.vcxproj
+++ b/PhysicsGame.vcxproj
@@ -210,6 +210,7 @@
     <ClCompile Include="Source\ModuleAudio.cpp" />
     <ClCompile Include="Source\SceneGame.cpp" />
     <ClCompile Include="Source\ModuleLocalization.cpp" />
+    <ClCompile Include="Source\SceneOptions.cpp" />
     <ClCompile Include="Source\SceneIntro.cpp" />
     <ClCompile Include="Source\SceneMainMenu.cpp" />
     <ClCompile Include="Source\ModulePhysics.cpp" />
@@ -219,6 +220,7 @@
     <ClCompile Include="Source\ModuleWindow.cpp" />
     <ClCompile Include="Source\Particle.cpp" />
     <ClCompile Include="Source\ParticleSystem.cpp" />
+    <ClCompile Include="Source\SceneSelectSetup.cpp" />
     <ClCompile Include="Source\Timer.cpp" />
     <ClCompile Include="Source\UIButton.cpp" />
     <ClCompile Include="Source\UISlider.cpp" />
@@ -245,6 +247,7 @@
     <ClInclude Include="Source\ModuleAudio.h" />
     <ClInclude Include="Source\SceneGame.h" />
     <ClInclude Include="Source\ModuleLocalization.h" />
+    <ClInclude Include="Source\SceneOptions.h" />
     <ClInclude Include="Source\SceneIntro.h" />
     <ClInclude Include="Source\SceneMainMenu.h" />
     <ClInclude Include="Source\ModulePhysics.h" />
@@ -255,6 +258,7 @@
     <ClInclude Include="Source\p2Point.h" />
     <ClInclude Include="Source\Particle.h" />
     <ClInclude Include="Source\ParticleSystem.h" />
+    <ClInclude Include="Source\SceneSelectSetup.h" />
     <ClInclude Include="Source\Timer.h" />
     <ClInclude Include="Source\UIButton.h" />
     <ClInclude Include="Source\UIElement.h" />
