--- a/PhysicsGame.vcxproj.filters
+++ b/PhysicsGame.vcxproj.filters
@@ -140,6 +140,12 @@
     <ClCompile Include="Source\SceneMainMenu.cpp">
       <Filter>Modules\Type %28Module%29\Scene %28ModueScene%29</Filter>
     </ClCompile>
+    <ClCompile Include="Source\SceneOptions.cpp">
+      <Filter>Modules\Type %28Module%29\Scene %28ModueScene%29</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\SceneSelectSetup.cpp">
+    <Filter>Modules\Type %28Module%29\Scene %28ModueScene%29</Filter>
+    </ClCompile>
     <ClCompile Include="Source\SceneIntro.cpp">
       <Filter>Modules\Type %28Module%29\Scene %28ModueScene%29</Filter>
     </ClCompile>
@@ -242,6 +248,12 @@
     </ClInclude>
     <ClInclude Include="Source\FontCreator.h">
       <Filter>Utils</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\SceneOptions.h">
+      <Filter>Modules\Type %28Module%29\Scene %28ModueScene%29</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\SceneSelectSetup.h">
+      <Filter>Modules\Type %28Module%29\Scene %28ModueScene%29</Filter>
     </ClInclude>
     <ClInclude Include="Source\SceneIntro.h">
       <Filter>Modules\Type %28Module%29\Scene %28ModueScene%29</Filter>
