--- a/PhysicsGame.vcxproj.filters
+++ b/PhysicsGame.vcxproj.filters
@@ -58,6 +58,9 @@
     <Filter Include="Systems\UI Elements\Type %28UI Elements%29">
       <UniqueIdentifier>{b8dca133-cd66-4c85-befb-085954201f28}</UniqueIdentifier>
     </Filter>
+    <Filter Include="MapObjects\Type %28MapObjects%29\Map">
+      <UniqueIdentifier>{5c245351-c5ea-426a-8dff-2d92f1d21dab}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source\ModuleAssetLoader.cpp">
@@ -144,13 +147,16 @@
       <Filter>Modules\Type %28Module%29\Scene %28ModueScene%29</Filter>
     </ClCompile>
     <ClCompile Include="Source\SceneSelectSetup.cpp">
-    <Filter>Modules\Type %28Module%29\Scene %28ModueScene%29</Filter>
+      <Filter>Modules\Type %28Module%29\Scene %28ModueScene%29</Filter>
     </ClCompile>
     <ClCompile Include="Source\SceneIntro.cpp">
       <Filter>Modules\Type %28Module%29\Scene %28ModueScene%29</Filter>
     </ClCompile>
     <ClCompile Include="Source\ModuleUserPreferences.cpp">
       <Filter>Modules\Type %28Module%29</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\RaceTrack.cpp">
+      <Filter>MapObjects\Type %28MapObjects%29\Map</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -263,6 +269,9 @@
     </ClInclude>
     <ClInclude Include="Source\ModuleUserPreferences.h">
       <Filter>Modules\Type %28Module%29</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\RaceTrack.h">
+      <Filter>MapObjects\Type %28MapObjects%29\Map</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
